# libled

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
demo/: CMakeLists.txt  ExcellentDemo.cpp  ExcellentDemo.h  HotShotEffect.cpp  HotShotEffect.h  ImpressiveDemo.cpp  ImpressiveDemo.h  Resources.cpp  Resources.h  Shaders.cpp  Shaders.h  UnstoppableAnimation.cpp  UnstoppableAnimation.h  Voronoi.cpp  Voronoi.h  configuration.toml  main.cpp
include/core/: Animation.h  Assert.h  Audio.h  Canvas.h  Color.h  FrameData.h  Graphics.h  GraphicsConstants.h  IImage.h  IRenderer.h  Image.h  Particle.h  Point.h  RTTI.h  Rect.h  Samplers.h  Sound.h
include/effects/: AnimationEffect.h  CoreEffects.h  IEffect.h  MotionEffects.h  OpticalEffects.h  ParticleEffects.h  PixelShaderEffect.h  TextEffects.h  TransitionEffects.h
include/platform/: DotMatrixGraphics.h  DummyGraphics.h  IGraphicsHAL.h  X11Graphics.h
include/utils/: Configuration.h  File.h  Font.h  FontChar.h  ShaderUtils.h  String.h  Text.h  TomlParser.h  Tools.h
src/core/: Animation.cpp  Assert.cpp  Audio.cpp  Canvas.cpp  Graphics.cpp  GraphicsConstants.cpp  Image.cpp  RTTI.cpp  Sound.cpp
src/effects/: AnimationEffect.cpp  CoreEffects.cpp  MotionEffects.cpp  OpticalEffects.cpp  ParticleEffects.cpp  PixelShaderEffect.cpp  TextEffects.cpp  TransitionEffects.cpp
src/platform/: DotMatrixGraphics.cpp  X11Graphics.cpp
src/utils/: Configuration.cpp  File.cpp  Font.cpp  ShaderUtils.cpp  String.cpp  Text.cpp  TomlParser.cpp  Tools.cpp
